--- a/stylesheetotherpages.css
+++ b/stylesheetotherpages.css
@@ -548,3 +548,12 @@ bottom:-800px;
 .password input{
 	width:605px;
 }
+
+.youtubeIframeAPI {
+	z-index:-100;
+	width:100%;
+	height:100%;	
+	position: absolute;
+	top: 0; 
+	left: 0;
+}
